Fix spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,7 +87,7 @@ nav.menu-content a {
   flex-flow: row wrap;
   align-items: stretch;
   justify-content: center;
-  margin: 0 0.5rem 4rem;
+  margin: 0 0.5rem 2rem;
 }
 
 .hero-media {
@@ -104,7 +104,7 @@ nav.menu-content a {
   display: flex;
   flex: 1;
   min-width: 250px;
-  margin: 1.5rem;
+  margin: 1.6rem;
 }
 
 .hero-text {
